@@ -319,6 +319,7 @@ Image::make_black ()
 	case PIX_FMT_RGBA:
 	case PIX_FMT_ABGR:
 	case PIX_FMT_BGRA:
+	case PIX_FMT_RGB555LE:
 		memset (data()[0], 0, lines(0) * stride()[0]);
 		break;
 
